CONTENT_API-93: Adopted EasyMDE as MarkDown editor

--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "buefy": "^0.9.7",
     "core-js": "^3.10.2",
     "es6-promise": "^4.2.8",
+    "highlight.js": "^11.6.0",
     "moment": "^2.29.1",
     "vue": "^2.6.12",
+    "vue-easymde": "^2.0.0",
     "vue-i18n": "^8.24.3",
     "vue-router": "^3.5.1",
     "vue-sanitize": "^0.2.1",
