--- a/src/client/js/config/config.json.sample
+++ b/src/client/js/config/config.json.sample
@@ -5,7 +5,20 @@
   "isSSL": false,
   "siteName": "Sample Site",
   "serviceIds": ["hoge,fuga"],
+  "voteTypesDefault": ["like", "dislike"],
+  "isEnabledComment": true,
   "adminAuthHeader": "Authorization",
   "adminAuthHeaderTokenPrefix": "Bearer",
+  "media": {
+    "url": "https://cms-media.palr.link",
+    "upload": {
+      "image": {
+        "mimeTypes": ["image/png", "image/gif", "image/jpeg"],
+        "extensions": ["png", "gif", "jpg", "jpeg"],
+        "sizeMB": 3,
+        "maxcount": 5
+      }
+    }
+  },
   "tinyMCEApiKey": null
 }
