Changed config key

--- a/src/client/js/config/config.json.sample
+++ b/src/client/js/config/config.json.sample
@@ -15,7 +15,7 @@
       "image": {
         "mimeTypes": ["image/png", "image/gif", "image/jpeg"],
         "extensions": ["png", "gif", "jpg", "jpeg"],
-        "sizeMB": 3,
+        "sizeLimitMB": 3,
         "maxcount": 5
       }
     }
