--- a/src/client/js/config/config.json.sample
+++ b/src/client/js/config/config.json.sample
@@ -13,6 +13,7 @@
     "url": "https://cms-media.palr.link",
     "upload": {
       "image": {
+        "sizes": ["1200x1200", "800x800", "400x400", "400x400xs"],
         "mimeTypes": ["image/png", "image/gif", "image/jpeg"],
         "extensions": ["png", "gif", "jpg", "jpeg"],
         "sizeLimitMB": 3,
