--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "moment": "^2.29.1",
     "ulid": "^2.3.0",
     "vue": "^2.6.12",
+    "vue-clipboard2": "^0.3.3",
     "vue-easymde": "^2.0.0",
     "vue-i18n": "^8.24.3",
     "vue-router": "^3.5.1",
