CONTENT_API-115: Added config for media file upload

--- a/src/client/js/config/config.json.sample
+++ b/src/client/js/config/config.json.sample
@@ -18,6 +18,12 @@
         "extensions": ["png", "gif", "jpg", "jpeg"],
         "sizeLimitMB": 3,
         "maxcount": 5
+      },
+      "file": {
+        "mimeTypes": ["image/png", "image/gif", "image/jpeg", "application/pdf"],
+        "extensions": ["png", "gif", "jpg", "jpeg", "pdf"],
+        "sizeLimitMB": 3,
+        "maxcount": 5
       }
     }
   },
