CONTENT_API-128: Implemented to set date string as slug automatidaly

--- a/src/client/js/config/config.json.sample
+++ b/src/client/js/config/config.json.sample
@@ -9,6 +9,12 @@
   "isEnabledComment": true,
   "adminAuthHeader": "Authorization",
   "adminAuthHeaderTokenPrefix": "Bearer",
+  "post": {
+    "autoSlugSet": {
+      "isEnabled": false,
+      "format": "date"
+    }
+  },
   "media": {
     "url": "https://cms-media.palr.link",
     "upload": {
