--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "vue-i18n": "^8.24.3",
     "vue-router": "^3.5.1",
     "vue-sanitize": "^0.2.1",
+    "vuedraggable": "^2.24.3",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
