--- a/src/client/js/config/config.json.sample
+++ b/src/client/js/config/config.json.sample
@@ -4,7 +4,7 @@
   "baseUrl": "/",
   "isSSL": false,
   "siteName": "Sample Site",
-  "serviceIds": ["hoge,fuga"],
+  "serviceId": "hoge",
   "voteTypesDefault": ["like", "dislike"],
   "isEnabledComment": true,
   "adminAuthHeader": "Authorization",
@@ -16,7 +16,7 @@
     }
   },
   "media": {
-    "url": "https://cms-media.palr.link",
+    "url": "https://media.example.com",
     "upload": {
       "image": {
         "sizes": ["1200x1200", "800x800", "400x400", "400x400xs"],
